--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
-      - .:/app
-      - ./public/images:/app/public/images
+      - ./images:/images
     ports:
       - "3000:3000"
